# arirang-soorirang-roco

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  requirements.txt
backend/fastapi/: Dockerfile  alembic.ini  database.py  db_models.py  main.py  migrate.py  pronunciation_client.py  pyproject.toml  requirements.txt  schemas.py  seed.py  tts_client.py
content_data/: main.py  pyproject.toml  settings.py
content_data/data/: meanings.json  quizzes.json  sentences.json  words.json
content_data/scripts/: fetch_meanings.py  generate_sentences.py  manage_meanings.py  manage_quizzes.py  manage_sentences.py  manage_words.py
content_data/src/: common.py  models.py
ml_core/: .dockerignore  .env.example  Dockerfile.aligner  Dockerfile.aligner.arm64  Dockerfile.api  Dockerfile.inference  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.aligner.txt  requirements.inference.runtime.txt  requirements.inference.service.txt  requirements.wav2vec2.txt
ml_core/app/: __init__.py  __main__.py  acoustic_analysis.py  acoustic_feature_extractor.py  acoustic_schemas.py  aligner_client.py  aligner_server.py  config.py  diagnostic_engine.py  fairseq_runner.py  gemini_client.py  inference_backend.py  inference_client.py  inference_server.py  llm_evidence_builder.py  phoneme_edits.py  pipeline.py  pronunciation_analysis_service.py  reference_cache.py  schemas.py  server.py  stress_analyzer.py  tts_asset_cache.py  tts_reference.py  tts_service.py  whisper_client.py  whisper_pronunciation_analysis_service.py
(+87 files in other folders)
