[project]
name = "content-data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
