[project]
name = "arirang-backend"
version = "0.1.0"
description = "아리랑 소리랑로코 백엔드 API 서버"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.42.0",
    "pydantic>=2.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fastapi"]
exclude = ["assets*", "categories*"]